# lost-relic

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/: enemy.tsx  export.py  test.json  test.tmx
assets/level_src/: 0.tmx  1.tmx  2.tmx  3.tmx  4.tmx  5.tmx  6.tmx  7.tmx  8.tmx  testing_grounds.tmx
assets/levels/: 0.tmx  1.tmx  2.tmx  3.tmx  4.tmx  5.tmx  6.tmx  7.tmx  8.tmx  testing_grounds.tmx
assets/tilesets/: box.tsx  button.tsx  cell_tower.tsx  door.tsx  exit.tsx  factory.tsx  factory_extra.tsx  markers.tsx  robot.tsx  spikes.tsx
src/: animation.rs  camera.rs  collide.rs  event.rs  events.rs  main.rs  main_menu.rs  map.rs  player.rs  slider.rs  state.rs  tiled_loader.rs  trigger.rs  triggers.rs  ui.rs  velocity.rs
