[package]
name = "lost-relic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_ecs_tilemap = "0.6.0"
tiled = "0.10.2"
anyhow = { version = "1.0" }