[package]
name = "lost-relic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
bevy_ecs_tilemap = { version = "0.6.0", features = ["atlas"]}
tiled = {version = "0.10.2", default-features = false }
anyhow = { version = "1.0" }
bitflags = "1.3.2"